--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Welcome to...</h1>
     <img th:src="@{images/logo.png}" alt="Taco Cloud Logo"/>
+    <div>
+        <a th:href="@{/login}">Log in</a>
+        <a th:href="@{/register}">Register here</a>
+    </div>
 </body>
 </html>
