Configuration files implemented

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,6 +11,7 @@
     <div>
         <a th:href="@{/login}">Log in</a>
         <a th:href="@{/register}">Register here</a>
+        <a th:href="@{/orders}">Orders</a>
     </div>
 </body>
 </html>
